Take out save and open page in feature test and add id to plants in plants index view.

--- a/app/views/plants/index.html.erb
+++ b/app/views/plants/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Your Plants</h1>
 
 <% @plants.each do |plant| %>
-  <ul>
+  <ul id='plants'>
     <li>Species: <%= plant.species %></li>
     <li>Nickname: <%= plant.nickname %></li>
   </ul>
