--- a/app/views/plants/new.html.erb
+++ b/app/views/plants/new.html.erb
@@ -1,23 +1,2 @@
 <h1>Create Your New Plant Pal!</h1>
-
-<%= form_for(@plant) do |f| %>
-  <p>
-    <%= f.label :species %><br />
-    <%= f.text_field :species %>
-  </p>
-  <p>
-    <%= f.label :nickname %><br />
-    <%= f.text_field :nickname %>
-  </p>
-  <p>
-    <%= f.label :amount_of_water %><br />
-    <%= f.text_area :amount_of_water %>
-  </p>
-  <p>
-    <%= f.label :amount_of_sun %><br />
-    <%= f.text_area :amount_of_sun %>
-  </p>
-  <p>
-    <%= f.submit %>
-  </p>
-<% end %>
+<%= render partial: 'form' %>
