--- a/app/views/plants/show.html.erb
+++ b/app/views/plants/show.html.erb
@@ -8,3 +8,4 @@
 <p><%= link_to "Delete Plant Pal", plant_path(@plant), method: :delete, data: {confirm: "Are you sure you want to delete this plant?"} %></p>
 <h3>Notes:</h3>
 <%= render partial: 'plants/note', collection: @plant.notes.reverse %>
+<%= render partial: 'notes/form' %>
