Start creating categories and tests for categories. ATP.

--- a/app/views/plants/_form.html.erb
+++ b/app/views/plants/_form.html.erb
@@ -16,6 +16,10 @@
     <%= f.text_area :amount_of_sun %>
   </p>
   <p>
+  <%= f.label :category_list %><br />
+  <%= f.text_field :category_list %>
+  </p>
+  <p>
     <%= f.submit %>
   </p>
 <% end %>
