--- a/app/views/plants/index.html.erb
+++ b/app/views/plants/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Your Plants</h1>
-<%= link_to "Create a New Plant Pal", new_plant_path %>
+<%= link_to "Create a New Plant", new_plant_path %>
 
 <% @plants.each do |plant| %>
   <ul id='plants'>
