Add categories show page and tests, add categories controller, add categories resources to routes, and add links to plant show page to get to categories. ATP.

--- a/app/views/plants/show.html.erb
+++ b/app/views/plants/show.html.erb
@@ -5,8 +5,8 @@
 <p>Amount of Sun: <%= @plant.amount_of_sun %></p>
 <p>Created: <%= @plant.created_at %></p>
 <p>Categories:
-  <% @plant.categories.each do |c| %>
-    <%= c.name %>
+  <% @plant.categories.each do |category| %>
+    <%= link_to category.name, category_path(category) %>
   <% end %>
 </p>
 <p><%= link_to "Edit", edit_plant_path(@plant) %></p>
