Add ability to create new user and log out. Add some styling to welcome page. Start adding admin stuff.

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,7 @@
-<%= link_to "Sign Up", new_user_path %>
-<%= link_to "Sign In", login_path %>
+<h1>Plant Pal</h1>
+
+<%= image_tag('mdeliciosa.jpg', class: 'welcome-img', :align=> "middle") %>
+
+<div class='welcome-links'>
+  <%= link_to "Sign Up", new_user_path %> <%= link_to "Sign In", login_path %>
+</div>
