--- a/app/assets/stylesheets/main.css.erb
+++ b/app/assets/stylesheets/main.css.erb
@@ -3,6 +3,38 @@ body {
   font-family: 'Mukta', sans-serif;
 }
 
+nav {
+  padding: 1px;
+  margin: 0;
+  background-color: #fff;
+  text-align: center;
+  font-weight: 500;
+  font-size: 1.25em;
+  border-bottom: 1px solid #404040;
+}
+
+nav ul {
+  margin: auto;
+  width: 100%;
+  padding: 7px;
+  background-color: #fff;
+}
+
+nav li {
+  display: inline;
+  padding: 6px 55px 6px 55px;
+}
+
+nav a {
+  text-decoration: none;
+  color: #595959;
+}
+
+nav a:hover {
+  text-decoration: none;
+  color: #000;
+}
+
 h1 {
   text-align: center;
   font-family: 'Mukta', sans-serif;
