--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,10 +10,19 @@
   </head>
 
   <body>
-    <% unless current_user %>
+    <% if !current_user %>
     <div class='welcome-links'>
       <p> <%= link_to 'Sign Up', new_user_path %> <%= link_to 'Sign In', login_path %> </p>
     </div>
+    <% elsif current_admin? %>
+      <nav>
+        <div class='container'>
+          <ul>
+            <li><%= link_to 'Categories', admin_categories_path %></li>
+            <li><%= link_to 'Log Out', logout_path, method: :delete %></li>
+          </ul>
+        </div>
+      </nav>
     <% else %>
       <nav>
         <div class="container">
