--- a/app/views/plants/_note.html.erb
+++ b/app/views/plants/_note.html.erb
@@ -1,4 +1,8 @@
-<div>
-  <h4><%= note.created_at %></h4>
-  <p class="note"><%= note.content %></p>
-</div>
+<tr>
+  <td class="data-cell">
+    <%= note.created_at %>
+  </td>
+  <td class="note data-cell">
+    <%= note.content %>
+  </td>
+</tr>
