--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,9 +1,9 @@
 <h1>All Categories</h1>
-<%= link_to "Back to All Plants", plants_path %>
+<%= link_to "<< Back to All Plants", plants_path %>
 
 <% @uc.each do |category| %>
   <ul>
-    <li><%= link_to category.name, category_path(category) %></l1>
-    <li id="category-delete-<%= category.id %>"><%= link_to "Delete", category_path(category), method: :delete, data: {confirm: "Are you sure you want to delete this category?"} %> </li>
+    <li class='category-list'><%= link_to category.name, category_path(category) %></l1>
+    <li class='category-list' id="category-delete-<%= category.id %>"><%= link_to "Delete", category_path(category), method: :delete, data: {confirm: "Are you sure you want to delete this category?"} %> </li>
   </ul>
 <% end %>
