--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -2,7 +2,7 @@
 
 <% @categories.each do |category| %>
   <ul>
-    <li><%= link_to category.name, category_path(category) %>
-    <li id="category-delete-<%= category.id %>"><%= link_to "Delete", category_path(category), method: :delete, data: {confirm: "Are you sure you want to delete this category?"} %> </li>
+    <li class='category-list'><%= link_to category.name, category_path(category) %>
+    <li class='category-list' id="category-delete-<%= category.id %>"><%= link_to "Delete", category_path(category), method: :delete, data: {confirm: "Are you sure you want to delete this category?"} %> </li>
   </ul>
 <% end %>
