Update title to better fit application

--- a/app/views/plants/index.html.erb
+++ b/app/views/plants/index.html.erb
@@ -1,4 +1,4 @@
-<div class='header'>Your Plants</div>
+<div class='header'>Your Plant Pals</div>
 <%= link_to "Create a New Plant", new_plant_path %><br>
 <%= link_to "See All Categories", categories_path %>
 
